--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <head>
     <title>RSS Feed Example</title>
     <link rel="shortcut icon" href="">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id='root'></div>
+    <div id='root' style="min-height: 100vh"></div>
     <script src="static/bundle.js"></script>
 </body>
 </html>
